# pygguf

./: LICENSE  README.md  gguf.py  gguf_parser.py  pyproject.toml  test.py
